<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_about">about</string>
    <string name="toolbar_exit">exit</string>
    <string name="toolBar_add">add</string>
    <string name="toolBar_save">save</string>
    <string name="popup_clean">clean</string>
    <string name="popup_edit">edit</string>
    <string name="about">Савош Мария, гр 1919</string>
    <string name="toolBar_clear_all">clear all</string>
    <string name="delete">delete</string>
    <string name="toolBar_open">open</string>
    <string name="rb_array">Из array</string>
    <string name="rb_sp">Из SP</string>
    <string name="rb_gf">Из GF</string>
</resources>