<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_about"
        android:title="@string/toolbar_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_exit"
        android:title="@string/toolbar_exit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/toolbar_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/toolBar_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/toolBar_clear_all"
        app:showAsAction="ifRoom" />
</menu>